# ScreenAI

./: .env.example  .gitignore  CNAME  LICENSE  README.md  demo-v5.html  index.html  package-lock.json  package.json  popup.html  tsconfig.json  vite.config.ts  vite.desktop.config.ts
.claude/: launch.json
.github/workflows/: release.yml
desktop/: index.html
desktop/src/: desktop-main.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
public/: manifest.json
scripts/: post-build.js
src/: background.ts  browser-polyfill.ts  content.ts  popup.ts
src/affiliate/: product-detector.ts
src/auth/: auth-service.ts  auth-ui.ts  supabase.ts
src/bestof/: BestOfEngine.ts
src/compaction/: Compactor.ts  SummaryGenerator.ts  TokenEstimator.ts
src/connectors/: index.ts  proxy-connector.ts
src/memory/: MemoryDetector.ts  MemoryPrompt.ts  SlashCommands.ts
src/storage/: index.ts
src/sync/: sync-service.ts
src/types/: index.ts
src/ui/highlight/: highlight.css  highlight.ts
src/ui/main/: ChatView.ts  CompactionDisplay.ts  ContextMenu.ts  FeedbackSystem.ts  FileUpload.ts  MainView.ts  MessageActions.ts  Modals.ts  ModelSelector.ts  ScreenAIApp.ts  SearchEngine.ts  SettingsPanel.ts  Sidebar.ts  i18n.ts  icons.ts  styles.css  version.ts
src/ui/overlay/: PdfExport.ts  annotation.ts  overlay.ts  region.ts
src/utils/: markdown.ts
supabase/functions/ai-proxy/: index.ts
supabase/migrations/: 001_initial_schema.sql
