[package]
name = "screenai-desktop"
version = "1.1.0"
description = "ScreenAI — Universal AI Screen Assistant"
authors = ["ScreenAI"]
license = "AGPL-3.0-or-later"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "path-all", "window-all", "global-shortcut-all", "dialog-all", "shell-open", "fs-all", "system-tray", "global-shortcut", "process-relaunch"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[target.'cfg(not(target_os = "macos"))'.dependencies]
screenshots = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
